<resources>
    <string name="app_name">Miciaha - Android Learning</string>
    <!--Main Menu resources -->
    <string name="txtUserInterface">User Interface</string>
    <string name="txtInputVO">User Input, Variables, and Operations</string>
    <string name="txtDecisionMaking">Decision-Making Controls</string>
    <string name="txtListsArraysWebBrowsers">Lists, Arrays, and Web Browsers</string>
    <!--Bruschetta Recipe Resources -->
    <string name="btnBruschetta">Bruschetta Recipe</string>
    <string name="txtTitle">Bruschetta Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="txtIngredients">Ingredients</string>
    <!--Concert Tickets resources -->
    <string name="btnConcert">Concert Tickets</string>
    <string name="txtTickets">Ticket Vault</string>
    <string name="txtTickNum">Number of Ticekts</string>
    <string-array name="txtBands">
        <item>The Killers</item>
        <item>Joy Wave</item>
        <item>CHVRCHES</item>
    </string-array>
    <string name="btnCostFind">Find The Cost</string>
    <!--Piggy Bank Children's App -->
    <string name="btnPiggyBankApp">Piggy Bank</string>
    <string name="txtPiggyTitle">Piggy\'s Coin Counter</string>
    <string name="btnPiggyApp">Piggy Bank App</string>
    <string name="btnPiggyBank">Continue</string>
    <string name="txtQuarters"># of Quarters</string>
    <string name="txtDimes"># of Dimes</string>
    <string name="txtNickles"># of Nickles</string>
    <string name="txtPennies"># of Pennies</string>
    <string-array name="txtMoney">
        <item>Spend</item>
        <item>Save</item>
    </string-array>
    <string name="txtCalculate">Calculate</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_home">Home</string>
    <string name="title_projects">Projects</string>
    <string name="title_contacts">Contact</string>
    <!--Medical Weight Converter -->
    <string name="MWCAppName">Weight Converter</string>
    <string name="hintMWC">Weight of Patient</string>
    <string name="MWC">Convert Patient Weight</string>
    <string name="radLBToKilo">Convert Pounds to Kilograms</string>
    <string name="radKiloToLB">Convert Kilograms to Pounds</string>
    <string name="btnConvert">Convert Weight</string>
    <!-- Money conversion App -->
    <string name="txtMoneyConversionTitle">Money Converter</string>
    <string name="hintMoney">Amount in USD</string>
    <string name="radEuro">Euros</string>
    <string name="radPeso">Pesos</string>
    <string name="radCanadian">Canadian dollars</string>
    <string name="btnMoneyConverter">Convert</string>
    <!-- Coffee Shop -->
    <string name="txtCoffeeTitle">Favorite Tallahassee Coffee Shops</string>
    <string name="luckygoat">Lucky Goat Image</string>
    <string name="blackdog">Black Dog Cafe Image</string>
    <string name="allsaints">All Saints Cafe Image</string>
    <string name="redeye">RedEye Coffee Image</string>
    <string name="sweetshop">Sweet Shop</string>
</resources>
