<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.healthyrecipes.Recipe">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/txtTitle"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTitle"
        android:layout_marginStart="11dp"
        android:layout_marginTop="38dp"
        android:text="@string/txtIngredients"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="24dp"
        android:text="@string/txtItem1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="19dp"
        android:text="@string/txtItem2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="23dp"
        android:text="@string/txtItem3"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="16dp"
        android:text="@string/txtItem4"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="22dp"
        android:text="@string/txtDirections"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtMix"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="358dp" />
</RelativeLayout>
