<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.healthyrecipes.PiggyBank">

    <EditText
        android:id="@+id/numQuarters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="@string/txtQuarters"
        android:inputType="number" />

    <EditText
        android:id="@+id/numDimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/numQuarters"
        android:layout_below="@+id/numQuarters"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/txtDimes"
        android:inputType="number" />

    <EditText
        android:id="@+id/numNickles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/numDimes"
        android:layout_below="@+id/numDimes"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/txtNickles"
        android:inputType="number" />

    <EditText
        android:id="@+id/numPennies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/numNickles"
        android:layout_below="@+id/numNickles"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/txtPennies"
        android:inputType="number" />

    <Spinner
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calculateCoins"
        android:layout_alignBottom="@+id/calculateCoins"
        android:layout_alignEnd="@+id/imageView3"
        android:entries="@array/txtMoney"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/calculateCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/txtResult"
        android:text="@string/txtCalculate" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculateCoins"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/numDimes"
        android:layout_marginStart="11dp"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/change" />
</RelativeLayout>
