<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.healthyrecipes.Brush">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txtTitle"
        android:textSize="42sp"
        tools:textSize="40sp" />

    <ImageView
        android:id="@+id/imgRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description"
        android:visibility="visible"
        app:srcCompat="@drawable/bruschetta" />

    <Button
        android:id="@+id/btnRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRecipe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/btnRecipe"
        android:textSize="40sp" />

</RelativeLayout>
