<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.healthyrecipes.Concert">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/txtTickets"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/txtTickNum"
        android:inputType="number"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTickets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:entries="@array/txtBands"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btnCostFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/btnCostFind" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCostFind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />
</RelativeLayout>
